; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_directive.c_ngx_http_lua_content_by_lua.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_directive.c_ngx_http_lua_content_by_lua.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_27__ = type { i32, %struct.TYPE_20__* }
%struct.TYPE_20__ = type { %struct.TYPE_22__* }
%struct.TYPE_22__ = type { i64, i32 }
%struct.TYPE_28__ = type { i32* }
%struct.TYPE_25__ = type { i32 }
%struct.TYPE_23__ = type { i32 }
%struct.TYPE_24__ = type { i8*, i8*, i64, %struct.TYPE_21__ }
%struct.TYPE_21__ = type { i32*, %struct.TYPE_22__ }
%struct.TYPE_26__ = type { %struct.TYPE_21__*, %struct.TYPE_22__*, %struct.TYPE_27__* }

@.str = private unnamed_addr constant [6 x i8] c"enter\00", align 1
@NGX_CONF_ERROR = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [13 x i8] c"is duplicate\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"value[0]: %.*s\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"value[1]: %.*s\00", align 1
@NGX_LOG_ERR = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [46 x i8] c"invalid location config: no runnable Lua code\00", align 1
@ngx_http_lua_content_handler_inline = common dso_local global i32* null, align 8
@.str.5 = private unnamed_addr constant [15 x i8] c"content_by_lua\00", align 1
@.str.6 = private unnamed_addr constant [14 x i8] c"chunkname: %s\00", align 1
@NGX_HTTP_LUA_INLINE_KEY_LEN = common dso_local global i64 0, align 8
@NGX_HTTP_LUA_INLINE_TAG = common dso_local global i8* null, align 8
@NGX_HTTP_LUA_INLINE_TAG_LEN = common dso_local global i64 0, align 8
@NGX_OK = common dso_local global i64 0, align 8
@NGX_HTTP_LUA_FILE_KEY_LEN = common dso_local global i64 0, align 8
@NGX_HTTP_LUA_FILE_TAG = common dso_local global i8* null, align 8
@NGX_HTTP_LUA_FILE_TAG_LEN = common dso_local global i64 0, align 8
@ngx_http_lua_module = common dso_local global i32 0, align 4
@ngx_http_core_module = common dso_local global i32 0, align 4
@ngx_http_lua_content_handler = common dso_local global i32 0, align 4
@NGX_CONF_OK = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ngx_http_lua_content_by_lua(%struct.TYPE_27__* %0, %struct.TYPE_28__* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_27__*, align 8
  %6 = alloca %struct.TYPE_28__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_22__*, align 8
  %12 = alloca %struct.TYPE_25__*, align 8
  %13 = alloca %struct.TYPE_23__*, align 8
  %14 = alloca %struct.TYPE_24__*, align 8
  %15 = alloca %struct.TYPE_26__, align 8
  store %struct.TYPE_27__* %0, %struct.TYPE_27__** %5, align 8
  store %struct.TYPE_28__* %1, %struct.TYPE_28__** %6, align 8
  store i8* %2, i8** %7, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = bitcast i8* %16 to %struct.TYPE_24__*
  store %struct.TYPE_24__* %17, %struct.TYPE_24__** %14, align 8
  %18 = call i32 (i8*, ...) @dd(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %19 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %3
  %24 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %24, i8** %4, align 8
  br label %204

25:                                               ; preds = %3
  %26 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %27 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %26, i32 0, i32 2
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %25
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8** %4, align 8
  br label %204

31:                                               ; preds = %25
  %32 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %32, i32 0, i32 1
  %34 = load %struct.TYPE_20__*, %struct.TYPE_20__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_22__*, %struct.TYPE_22__** %35, align 8
  store %struct.TYPE_22__* %36, %struct.TYPE_22__** %11, align 8
  %37 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %38 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %37, i64 0
  %39 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = trunc i64 %40 to i32
  %42 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %43 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %42, i64 0
  %44 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 8
  %46 = call i32 (i8*, ...) @dd(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i32 %41, i32 %45)
  %47 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %48 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %47, i64 1
  %49 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = trunc i64 %50 to i32
  %52 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %53 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %52, i64 1
  %54 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 8
  %56 = call i32 (i8*, ...) @dd(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i32 %51, i32 %55)
  %57 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %58 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %57, i64 1
  %59 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %58, i32 0, i32 0
  %60 = load i64, i64* %59, align 8
  %61 = icmp eq i64 %60, 0
  br i1 %61, label %62, label %67

62:                                               ; preds = %31
  %63 = load i32, i32* @NGX_LOG_ERR, align 4
  %64 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %65 = call i32 @ngx_conf_log_error(i32 %63, %struct.TYPE_27__* %64, i32 0, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.4, i64 0, i64 0))
  %66 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %66, i8** %4, align 8
  br label %204

67:                                               ; preds = %31
  %68 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %69 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %68, i32 0, i32 0
  %70 = load i32*, i32** %69, align 8
  %71 = load i32*, i32** @ngx_http_lua_content_handler_inline, align 8
  %72 = icmp eq i32* %70, %71
  br i1 %72, label %73, label %128

73:                                               ; preds = %67
  %74 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %75 = call i8* @ngx_http_lua_gen_chunk_name(%struct.TYPE_27__* %74, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i32 14, i64* %8)
  store i8* %75, i8** %10, align 8
  %76 = load i8*, i8** %10, align 8
  %77 = icmp eq i8* %76, null
  br i1 %77, label %78, label %80

78:                                               ; preds = %73
  %79 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %79, i8** %4, align 8
  br label %204

80:                                               ; preds = %73
  %81 = load i8*, i8** %10, align 8
  %82 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %83 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %82, i32 0, i32 0
  store i8* %81, i8** %83, align 8
  %84 = load i8*, i8** %10, align 8
  %85 = call i32 (i8*, ...) @dd(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i64 0, i64 0), i8* %84)
  %86 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %87 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %86, i32 0, i32 3
  %88 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %87, i32 0, i32 1
  %89 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %90 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %89, i64 1
  %91 = bitcast %struct.TYPE_22__* %88 to i8*
  %92 = bitcast %struct.TYPE_22__* %90 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %91, i8* align 8 %92, i64 16, i1 false)
  %93 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %94 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %93, i32 0, i32 0
  %95 = load i32, i32* %94, align 8
  %96 = load i64, i64* %8, align 8
  %97 = load i64, i64* @NGX_HTTP_LUA_INLINE_KEY_LEN, align 8
  %98 = add i64 %96, %97
  %99 = add i64 %98, 1
  %100 = call i8* @ngx_palloc(i32 %95, i64 %99)
  store i8* %100, i8** %9, align 8
  %101 = load i8*, i8** %9, align 8
  %102 = icmp eq i8* %101, null
  br i1 %102, label %103, label %105

103:                                              ; preds = %80
  %104 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %104, i8** %4, align 8
  br label %204

105:                                              ; preds = %80
  %106 = load i8*, i8** %9, align 8
  %107 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %108 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %107, i32 0, i32 1
  store i8* %106, i8** %108, align 8
  %109 = load i8*, i8** %9, align 8
  %110 = load i8*, i8** %10, align 8
  %111 = load i64, i64* %8, align 8
  %112 = call i8* @ngx_copy(i8* %109, i8* %110, i64 %111)
  store i8* %112, i8** %9, align 8
  %113 = load i8*, i8** %9, align 8
  %114 = load i8*, i8** @NGX_HTTP_LUA_INLINE_TAG, align 8
  %115 = load i64, i64* @NGX_HTTP_LUA_INLINE_TAG_LEN, align 8
  %116 = call i8* @ngx_copy(i8* %113, i8* %114, i64 %115)
  store i8* %116, i8** %9, align 8
  %117 = load i8*, i8** %9, align 8
  %118 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %119 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %118, i64 1
  %120 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %119, i32 0, i32 1
  %121 = load i32, i32* %120, align 8
  %122 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %123 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %122, i64 1
  %124 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %123, i32 0, i32 0
  %125 = load i64, i64* %124, align 8
  %126 = call i8* @ngx_http_lua_digest_hex(i8* %117, i32 %121, i64 %125)
  store i8* %126, i8** %9, align 8
  %127 = load i8*, i8** %9, align 8
  store i8 0, i8* %127, align 1
  br label %180

128:                                              ; preds = %67
  %129 = call i32 @ngx_memzero(%struct.TYPE_26__* %15, i32 24)
  %130 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %131 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %15, i32 0, i32 2
  store %struct.TYPE_27__* %130, %struct.TYPE_27__** %131, align 8
  %132 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %133 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %132, i64 1
  %134 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %15, i32 0, i32 1
  store %struct.TYPE_22__* %133, %struct.TYPE_22__** %134, align 8
  %135 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %136 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %135, i32 0, i32 3
  %137 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %15, i32 0, i32 0
  store %struct.TYPE_21__* %136, %struct.TYPE_21__** %137, align 8
  %138 = call i64 @ngx_http_compile_complex_value(%struct.TYPE_26__* %15)
  %139 = load i64, i64* @NGX_OK, align 8
  %140 = icmp ne i64 %138, %139
  br i1 %140, label %141, label %143

141:                                              ; preds = %128
  %142 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %142, i8** %4, align 8
  br label %204

143:                                              ; preds = %128
  %144 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %145 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %144, i32 0, i32 3
  %146 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %145, i32 0, i32 0
  %147 = load i32*, i32** %146, align 8
  %148 = icmp eq i32* %147, null
  br i1 %148, label %149, label %179

149:                                              ; preds = %143
  %150 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %151 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %150, i32 0, i32 0
  %152 = load i32, i32* %151, align 8
  %153 = load i64, i64* @NGX_HTTP_LUA_FILE_KEY_LEN, align 8
  %154 = add nsw i64 %153, 1
  %155 = call i8* @ngx_palloc(i32 %152, i64 %154)
  store i8* %155, i8** %9, align 8
  %156 = load i8*, i8** %9, align 8
  %157 = icmp eq i8* %156, null
  br i1 %157, label %158, label %160

158:                                              ; preds = %149
  %159 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %159, i8** %4, align 8
  br label %204

160:                                              ; preds = %149
  %161 = load i8*, i8** %9, align 8
  %162 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %163 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %162, i32 0, i32 1
  store i8* %161, i8** %163, align 8
  %164 = load i8*, i8** %9, align 8
  %165 = load i8*, i8** @NGX_HTTP_LUA_FILE_TAG, align 8
  %166 = load i64, i64* @NGX_HTTP_LUA_FILE_TAG_LEN, align 8
  %167 = call i8* @ngx_copy(i8* %164, i8* %165, i64 %166)
  store i8* %167, i8** %9, align 8
  %168 = load i8*, i8** %9, align 8
  %169 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %170 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %169, i64 1
  %171 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %170, i32 0, i32 1
  %172 = load i32, i32* %171, align 8
  %173 = load %struct.TYPE_22__*, %struct.TYPE_22__** %11, align 8
  %174 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %173, i64 1
  %175 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %174, i32 0, i32 0
  %176 = load i64, i64* %175, align 8
  %177 = call i8* @ngx_http_lua_digest_hex(i8* %168, i32 %172, i64 %176)
  store i8* %177, i8** %9, align 8
  %178 = load i8*, i8** %9, align 8
  store i8 0, i8* %178, align 1
  br label %179

179:                                              ; preds = %160, %143
  br label %180

180:                                              ; preds = %179, %105
  %181 = load %struct.TYPE_28__*, %struct.TYPE_28__** %6, align 8
  %182 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %181, i32 0, i32 0
  %183 = load i32*, i32** %182, align 8
  %184 = ptrtoint i32* %183 to i64
  %185 = load %struct.TYPE_24__*, %struct.TYPE_24__** %14, align 8
  %186 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %185, i32 0, i32 2
  store i64 %184, i64* %186, align 8
  %187 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %188 = load i32, i32* @ngx_http_lua_module, align 4
  %189 = call %struct.TYPE_23__* @ngx_http_conf_get_module_main_conf(%struct.TYPE_27__* %187, i32 %188)
  store %struct.TYPE_23__* %189, %struct.TYPE_23__** %13, align 8
  %190 = load %struct.TYPE_23__*, %struct.TYPE_23__** %13, align 8
  %191 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %190, i32 0, i32 0
  store i32 1, i32* %191, align 4
  %192 = load %struct.TYPE_27__*, %struct.TYPE_27__** %5, align 8
  %193 = load i32, i32* @ngx_http_core_module, align 4
  %194 = call %struct.TYPE_25__* @ngx_http_conf_get_module_loc_conf(%struct.TYPE_27__* %192, i32 %193)
  store %struct.TYPE_25__* %194, %struct.TYPE_25__** %12, align 8
  %195 = load %struct.TYPE_25__*, %struct.TYPE_25__** %12, align 8
  %196 = icmp eq %struct.TYPE_25__* %195, null
  br i1 %196, label %197, label %199

197:                                              ; preds = %180
  %198 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %198, i8** %4, align 8
  br label %204

199:                                              ; preds = %180
  %200 = load i32, i32* @ngx_http_lua_content_handler, align 4
  %201 = load %struct.TYPE_25__*, %struct.TYPE_25__** %12, align 8
  %202 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %201, i32 0, i32 0
  store i32 %200, i32* %202, align 4
  %203 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %203, i8** %4, align 8
  br label %204

204:                                              ; preds = %199, %197, %158, %141, %103, %78, %62, %30, %23
  %205 = load i8*, i8** %4, align 8
  ret i8* %205
}

declare dso_local i32 @dd(i8*, ...) #1

declare dso_local i32 @ngx_conf_log_error(i32, %struct.TYPE_27__*, i32, i8*) #1

declare dso_local i8* @ngx_http_lua_gen_chunk_name(%struct.TYPE_27__*, i8*, i32, i64*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i8* @ngx_palloc(i32, i64) #1

declare dso_local i8* @ngx_copy(i8*, i8*, i64) #1

declare dso_local i8* @ngx_http_lua_digest_hex(i8*, i32, i64) #1

declare dso_local i32 @ngx_memzero(%struct.TYPE_26__*, i32) #1

declare dso_local i64 @ngx_http_compile_complex_value(%struct.TYPE_26__*) #1

declare dso_local %struct.TYPE_23__* @ngx_http_conf_get_module_main_conf(%struct.TYPE_27__*, i32) #1

declare dso_local %struct.TYPE_25__* @ngx_http_conf_get_module_loc_conf(%struct.TYPE_27__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
